--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -6466,14 +6466,14 @@ z-select.z-select-host-interface li[disabled] .description:not(:empty),
     float: left;
     margin-left: -1em; }
 
-.audit-show-details-wrapper {
-  position: absolute;
-  text-align: right;
-  top: 5px;
-  right: 10px; }
-
 .audit-details-popup-wrapper {
   margin: 5px 10px; }
   .audit-details-popup-wrapper .audit-details-popup-textarea {
     width: 100%;
     height: 135px; }
+
+.audit-details-wrapper {
+  display: flex;
+  justify-content: space-between; }
+  .audit-details-wrapper .audit-show-details-bttn-wrapper {
+    margin: 0 5px 0 5px; }
